fix: order amount tampering vulnerability